# cporter

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: black.yml  lint.yml  mypy.yml
examples/: multithreading.py  run.py  string.py  string_test.py
examples/lib/: array.c  fib.c  main.c  string_lib.c
src/cporter/: cporter.py
