[tool.poetry]
name = "cporter"
version = "0.0.1"
description = "Simplify running C in Python"
authors = ["Easton Elliott <easton@geekness.eu>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
