[metadata]
name = CPorter
version = 0.1.0
author = Easton Elliott
author_email = easton@geekness.eu
description = CPorter simplifies the process of compiling, loading, and calling C functions from Python
url = https://github.com/snacsnoc/cporter

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
package_dir =
    =src